--- a/nFoodHome/package.json
+++ b/nFoodHome/package.json
@@ -10,9 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^5.9.4",
     "react": "17.0.1",
     "react-native": "^0.64.2",
-    "react-native-image-overlay": "^0.1.2"
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-overlay": "^0.1.2",
+    "react-native-reanimated": "^2.2.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
