--- a/nFoodHome/package.json
+++ b/nFoodHome/package.json
@@ -20,7 +20,8 @@
     "react-native-image-overlay": "^0.1.2",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.4.0"
+    "react-native-screens": "^3.4.0",
+    "react-native-snackbar": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
