--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "dependencies": {
-  
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^8.3.0",
+    "@react-native-firebase/auth": "^8.3.1",
+    "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "lottie-react-native": "^4.0.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-vector-icons": "^8.1.0",
-    "shortid": "^2.2.16",
-    "@react-native-firebase/app": "^8.3.0",
-    "@react-native-firebase/auth": "^8.3.1",
-    "@react-navigation/drawer": "^5.12.5"
+    "shortid": "^2.2.16"
   }
 }
