--- a/nFoodHome/package.json
+++ b/nFoodHome/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "firebase": "^8.7.0",
     "lottie-react-native": "^4.0.2",
     "native-base": "^3.0.3",
     "react": "17.0.1",
